# tree-seg-unsuper

./: .cursorrules  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  EXPERIMENTS.md  GETTING_DINOV3_RUNNING.md  KAGGLE_SETUP.md  MIGRATION_TO_DINOV3.md  README.md  TODO.md  bench.py  config.yaml  generate_docs_images.py  jupyter_tree_seg.py  kmeans_segmentation.py  main.py  pyproject.toml  run_segmentation.py  temp_docs_sweep.json  test_imports_only.py  tree_seg.ipynb  tree_seg.py  tree_seg_modern.py  tree_seg_notebook.py
.cache/: runtime_estimates.json
data/: .gitignore
deployment/: config.yaml  requirements.txt  run.sh  tree_seg_local.py
docs/: README.md  _config.yml  analysis.md  benchmark_plan.md  benchmark_usage.md  complete_example.md  ideation.md  index.md  methodology.md  models.md  parameter_analysis.md  parameter_comparison.md  parameter_comparison_curvature.md  parameter_comparison_elbow.md  results.md  technical_implementation.md  todo.md  troubleshooting.md  week1_results.md
examples/: README.md  batch_processing.py
final_paper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: tree_seg.ipynb  tree_seg_colab.ipynb  tree_seg_kaggle.ipynb
results/: v3_1_sample_evaluation.json  v3_balanced_oam_tcd.json
scripts/: README.md  __init__.py  analyze_dinov3_vegetation_features.py  analyze_vegetation_filtering.py  bench.py  compare_kmeans_spectral.py  debug_miou.py  debug_multilayer.py  debug_multilayer_diff.py  debug_v3_oam_tcd.py  download_dataset_isprs.py  download_dataset_oam.py  download_oam_tcd.py  evaluate_fortress.py  evaluate_semantic_segmentation.py  evaluate_species_clustering_oam.py  evaluate_v3_oam_tcd.py  evaluate_vegetation_filter_oam.py  extract_dataset_images_oam.py  generate_comparison_viz.py  generate_docs_images.py  generate_v3_1_semantic_samples.py  generate_v3_semantic_samples.py  inspect_dataset_oam.py  inspect_fortress_shapefiles.py  preprocess_fortress.py  run_benchmark.py  run_segmentation.py  test_gmm.py  (+18 more)
(+149 files in other folders)
