[project]
name = "final-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.11.9",
    "ty>=0.0.1a1",
]

[tool.ruff]
line-length = 88
exclude = [".venv", ".git"]
