[project]
name = "final-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "timm>=0.9.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
    "ty>=0.0.1a1",
]

[tool.ruff]
line-length = 88
exclude = [".venv", ".git"]

[tool.uv.sources]
ty = { git = "https://github.com/astral-sh/ty" }
