[project]
name = "final-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "timm>=0.9.0",
    "pyyaml>=6.0.2",
    "omegaconf",
    "ftfy",
    "regex",
    "torchmetrics",
    "Pillow>=10.0.0",
    "transformers>=4.55.2",
    "python-dotenv>=1.1.1",
    "safetensors>=0.5.3",
    "scikit-image>=0.22.0",
    "kaggle>=1.7.4.5",
    "termcolor>=2.4.0",
    "datasets>=4.4.1",
    "huggingface-hub>=0.34.4",
    "scipy>=1.15.3",
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "rasterio>=1.4.3",
    "pyproj>=3.7.1",
    "shapely>=2.1.2",
    "opencv-contrib-python>=4.12.0.88",
]

[dependency-groups]
dev = [
    "ruff>=0.11.9",
]

[tool.ruff]
line-length = 88
exclude = [".venv", ".git", "dinov3"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tree_seg*", "scripts*"]
